Keep tile utility adapter test Java 8 compatible